--- a/{{cookiecutter.github_repository_name}}/requirements.txt
+++ b/{{cookiecutter.github_repository_name}}/requirements.txt
@@ -5,6 +5,7 @@ argparse==1.4.0
 beautifulsoup4==4.4.0
 diff-match-patch==20121119
 django-autoslug==1.8.0
+django-cors-headers==1.1.0
 django-debug-toolbar==1.3.2
 django-extensions==1.5.7
 django-filter==0.11.0
