--- a/{{cookiecutter.github_repository_name}}/requirements.txt
+++ b/{{cookiecutter.github_repository_name}}/requirements.txt
@@ -1,22 +1,16 @@
-Django==1.8.4
-Markdown==2.6.2
-Pillow==2.9.0
-argparse==1.4.0
-beautifulsoup4==4.4.0
-diff-match-patch==20121119
-django-autoslug==1.8.0
+Django==1.9.7
 django-cors-headers==1.1.0
-django-debug-toolbar==1.3.2
-django-extensions==1.5.7
-django-filter==0.11.0
-django-flat-theme==1.1.1
-django-report-utils==0.3.13
-django-versatileimagefield==1.0.4
-djangorestframework==3.2.3
-djangorestframework-filters==0.4.0
-enum-compat==0.0.2
-html5lib==0.9999999
-openpyxl==2.2.6
-six==1.9.0
-sqlparse==0.1.16
-tablib==0.10.0
+django-debug-toolbar==1.4
+django-extensions==1.6.7
+django-filter==0.13.0
+django-material==0.8.0
+django-versatileimagefield==1.5
+djangorestframework==3.3.3
+djangorestframework-filters==0.8.0
+et-xmlfile==1.0.1
+jdcal==1.2
+Markdown==2.6.2
+openpyxl==2.3.5
+Pillow==3.2.0
+six==1.10.0
+sqlparse==0.1.19
